Switch pytorch on mac to nightly for ARM support

--- a/all_dev_mac.yml
+++ b/all_dev_mac.yml
@@ -1,6 +1,6 @@
 #Works with mamba
 channels:
-  - pytorch
+  - pytorch-nightly # Use nightly for ARM GPU support
   - conda-forge
   - anaconda
 dependencies:
