Install pymrmr manually due to specific compiler requirements

--- a/all_dev_mac.yml
+++ b/all_dev_mac.yml
@@ -30,7 +30,7 @@ dependencies:
   - pyqtgraph
   - pip:
     - colorednoise
-    - pymrmr
+      #    - pymrmr # Needs to be installed manually due to GCC compilation (CC=gcc CXX=g++ pip install -U pymrmr)
     - pynvim
     - pyright
     - pylsl
